@@ -88,6 +88,33 @@ if (defined($Oarexec_reattach_exit_value)){
 # ELSE we must launch oarexec on the first node
 oar_debug("[bipbip $Job_id] JOB: $Job_id; User: $job->{job_user}; Command: $job->{command} ==> hosts :[@hosts]\n");
 
+
+# CHECK nodes
+oar_debug("[bipbip $Job_id] Check nodes : @hosts\n");
+my @bad = ping_checker::test_hosts(@hosts);
+if ($#bad >= 0){
+    iolib::lock_table($base,["jobs","job_state_logs","resources","assigned_resources","frag_jobs","resource_state_logs","challenges","moldable_job_descriptions","job_types","job_dependencies","job_resource_groups","job_resource_descriptions"]);
+    iolib::set_job_message($base,$Job_id,"One or several nodes are not responding");
+    oar_error("[bipbip $Job_id] /!\\ Sorry but some nodes are inaccessible : @bad\n");
+    if ($job->{job_type} eq "INTERACTIVE"){
+        my ($addr,$port) = split(/:/,$job->{info_type});
+        oar_Tools::notify_tcp_socket($addr,$port,"INVALID RESOURCES : some resources did not respond");
+    }else{
+        # Resubmit this passive job
+        my $new_job_id = iolib::resubmit_job($base, $job->{job_id});
+        add_new_event($base,"RESUBMIT_JOB_AUTOMATICALLY",$job->{job_id},"Some resources are not responding and this is a PASSIVE job so I resubmit it (new id = $new_job_id).");
+    }
+    iolib::set_job_state($base,$Job_id,"Error");
+    iolib::add_new_event_with_host($base,"PING_CHECKER_NODE_SUSPECTED",$Job_id,"[bipbip] Ping_checker suspects  nodes for the job $Job_id : @bad",\@bad);
+    oar_Tools::notify_tcp_socket($Remote_host,$Remote_port,"ChState");
+    iolib::unlock_table($base);
+    iolib::disconnect($base);
+    exit(2);
+}else{
+    oar_debug("[bipbip $Job_id] No bad node\n");
+}
+# end CHECK
+
 ###################################
 # PROLOGUE EXECUTED ON OAR SERVER #
 ###################################
@@ -146,30 +173,7 @@ if (defined($Server_prologue)){
         oar_Tools::notify_tcp_socket($Remote_host,$Remote_port,"ChState");
     }
 }
-
-
-# CHECK nodes
-oar_debug("[bipbip $Job_id] Check nodes : @hosts\n");
-my @bad = ping_checker::test_hosts(@hosts);
-if ($#bad >= 0){
-    iolib::lock_table($base,["jobs","job_state_logs","resources","assigned_resources","frag_jobs","resource_state_logs","challenges","moldable_job_descriptions","job_types","job_dependencies","job_resource_groups","job_resource_descriptions"]);
-    iolib::set_job_state($base,$Job_id,"Finishing");
-    iolib::set_job_message($base,$Job_id,"One or several nodes are not responding");
-    iolib::add_new_event_with_host($base,"PING_CHECKER_NODE_SUSPECTED",$Job_id,"[bipbip] Ping_checker suspects  nodes for the job $Job_id : @bad",\@bad);
-    iolib::unlock_table($base);
-    oar_error("[bipbip $Job_id] /!\\ Sorry but some nodes are inaccessible : @bad\n");
-    oar_Tools::notify_tcp_socket($Remote_host,$Remote_port,"ChState");
-    if ($job->{job_type} eq "INTERACTIVE"){
-        my ($addr,$port) = split(/:/,$job->{info_type});
-        oar_Tools::notify_tcp_socket($addr,$port,"INVALID RESOURCES");
-    }
-    iolib::disconnect($base);
-    exit(2);
-}else{
-    oar_debug("[bipbip $Job_id] No bad node\n");
-}
-# end CHECK
-
+###############################################################################
 
 #CALL OAREXEC ON THE FIRST NODE
 my $moldable = iolib::get_current_moldable_job($base,$job->{assigned_moldable_job});
